--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        font-family: 'Arial', sans-serif;
+        font-family: Arial, sans-serif;
         background: linear-gradient(135deg, #ff9a9e, #fad0c4);
         overflow: hidden;
     }
@@ -24,17 +24,18 @@
         text-align: center;
         box-shadow: 0 10px 30px rgba(0,0,0,0.2);
         position: relative;
+        width: 90%;
+        max-width: 400px;
     }
 
     h1 {
         color: #e91e63;
-        font-size: 2em;
     }
 
     .buttons {
         margin-top: 30px;
         position: relative;
-        height: 80px;
+        height: 100px;
     }
 
     button {
@@ -43,19 +44,14 @@
         border-radius: 25px;
         font-size: 16px;
         cursor: pointer;
-        transition: 0.3s;
         position: absolute;
+        transition: 0.3s;
     }
 
     .yes {
         background-color: #ff4081;
         color: white;
-        left: 30%;
-    }
-
-    .yes:hover {
-        background-color: #e91e63;
-        transform: scale(1.1);
+        left: 20%;
     }
 
     .no {
@@ -71,8 +67,8 @@
         color: #d81b60;
     }
 </style>
-
 </head>
+
 <body>
 
 <div class="card">
@@ -88,20 +84,33 @@
 
 <script>
     const noBtn = document.getElementById("noBtn");
+    const message = document.getElementById("message");
 
     function moverBoton() {
-        const x = Math.random() * 300;
+        const x = Math.random() * 200;
         const y = Math.random() * 60;
         noBtn.style.left = x + "px";
         noBtn.style.top = y + "px";
     }
 
+    // PC
     noBtn.addEventListener("mouseover", moverBoton);
-    noBtn.addEventListener("click", moverBoton);
+
+    // Celular (táctil)
+    noBtn.addEventListener("touchstart", function(e) {
+        e.preventDefault(); // evita comportamiento raro
+        moverBoton();
+        message.innerHTML = "No sirve este botón 😊";
+    });
+
+    // Si logran darle click
+    noBtn.addEventListener("click", function() {
+        moverBoton();
+        message.innerHTML = "No sirve este botón 😊";
+    });
 
     function respuestaSi() {
-        document.getElementById("message").innerHTML = 
-        "Sabía que ibas a decir que sí ❤️";
+        message.innerHTML = "Sabía que ibas a decir que sí ❤️";
     }
 </script>
 
